--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CoderSwag</string>
+    <string name="this_is_a_description_im_learning_as_i_go">THIS IS A DESCRIPTION, IM LEARNING AS I GO.</string>
+    <string name="add_to_cart">ADD TO CART</string>
 </resources>
